; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/http/extr_connmgr.c_vlc_http_mgr_release.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/http/extr_connmgr.c_vlc_http_mgr_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_http_mgr = type { %struct.vlc_http_conn* }
%struct.vlc_http_conn = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vlc_http_mgr*, %struct.vlc_http_conn*)* @vlc_http_mgr_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vlc_http_mgr_release(%struct.vlc_http_mgr* %0, %struct.vlc_http_conn* %1) #0 {
  %3 = alloca %struct.vlc_http_mgr*, align 8
  %4 = alloca %struct.vlc_http_conn*, align 8
  store %struct.vlc_http_mgr* %0, %struct.vlc_http_mgr** %3, align 8
  store %struct.vlc_http_conn* %1, %struct.vlc_http_conn** %4, align 8
  %5 = load %struct.vlc_http_mgr*, %struct.vlc_http_mgr** %3, align 8
  %6 = getelementptr inbounds %struct.vlc_http_mgr, %struct.vlc_http_mgr* %5, i32 0, i32 0
  %7 = load %struct.vlc_http_conn*, %struct.vlc_http_conn** %6, align 8
  %8 = load %struct.vlc_http_conn*, %struct.vlc_http_conn** %4, align 8
  %9 = icmp eq %struct.vlc_http_conn* %7, %8
  %10 = zext i1 %9 to i32
  %11 = call i32 @assert(i32 %10)
  %12 = load %struct.vlc_http_mgr*, %struct.vlc_http_mgr** %3, align 8
  %13 = getelementptr inbounds %struct.vlc_http_mgr, %struct.vlc_http_mgr* %12, i32 0, i32 0
  store %struct.vlc_http_conn* null, %struct.vlc_http_conn** %13, align 8
  %14 = load %struct.vlc_http_conn*, %struct.vlc_http_conn** %4, align 8
  %15 = call i32 @vlc_http_conn_release(%struct.vlc_http_conn* %14)
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @vlc_http_conn_release(%struct.vlc_http_conn*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
